<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".MapsActivity" />



    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/row1"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButtonChose"
            android:fontFamily="sans-serif-black"
            android:onClick="ChangeToD1"
            android:text="@string/buttonText_location1"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButtonChose"
            android:fontFamily="sans-serif-black"
            android:onClick="ChangeToD1"
            android:text="@string/buttonText_location2"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/row2"
        android:layout_weight="0.08"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButtonChose"
            android:fontFamily="sans-serif-black"
            android:onClick="ChangeToD1"
            android:text="@string/buttonText_location3"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButtonChose"
            android:fontFamily="sans-serif-black"
            android:onClick="ChangeToD1"
            android:text="@string/buttonText_location4"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:id="@+id/row3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButtonChose"
            android:fontFamily="sans-serif-black"
            android:onClick="ChangeToD1"
            android:text="@string/buttonText_location5"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButtonChose"
            android:fontFamily="sans-serif-black"
            android:onClick="ChangeToD1"
            android:text="@string/buttonText_location6"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/row4"
        android:layout_weight="0.08"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButtonChose"
            android:fontFamily="sans-serif-black"
            android:onClick="ChangeToD1"
            android:text="@string/buttonText_location7"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorButtonChose"
            android:fontFamily="sans-serif-black"
            android:onClick="ChangeToD1"
            android:text="@string/buttonText_location8"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
